--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,8 @@
 <h1> Productos:</h1>
 
 <% @products.each do |product| %>
-  <%= link_to product_path(product.id), class: 'product' do %>
-  <h2><%= product.tittle %></h2>
+  <%= link_to product_path(product), class: 'product' do %>
+  <h2><%= product.title %></h2>
   <span><%= product.price %></span>
 
 <% end %>
