--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,6 @@
-<%= @product.tittle %>
+<h1> class='title'<%= @product.title %> </h1>
 
-<p> <%= @product.Description %></p>
 
-<span> <%= @product.price %></span>
+<p> class='description'<%= @product.description %></p>
+
+<span> class='price' <%= @product.price %></span>
