--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,3 +4,5 @@
 <p class='description'><%= @product.description %></p>
 
 <span class='price'> <%= @product.price %></span>
+
+<%= link_to 'Edit product', edit_product_path(@product) %>
