--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -14,5 +14,9 @@
     <%= form.label :price %>
     <%= form.number_field :price %>
   </div>
+  <div>
+    <%= form.label :photo %>
+    <%= form.file_field :photo %>
+  </div>
   <%=form.submit %>
 <% end %>
