--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,6 @@
+
+<%= image_tag @product.photo, width: 190 if @product.photo.attached?%>
+
 <h1 class='title'><%= @product.title %> </h1>
 
 
@@ -6,3 +9,6 @@
 <span class='price'> <%= @product.price %></span>
 
 <%= link_to 'Edit product', edit_product_path(@product) %>
+<%= link_to 'Delete product', product_path(@product), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }
+%>
+
