--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
 
-<h1> Productos:</h1>
+<h2><%= t('activerecord.attributes.product.title') %></h2>
 
-<%=render partial: 'product', collection: @products %>
+<%= render partial: 'product', collection: @products %>
