--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,6 +9,6 @@
 <span class='price'> <%= @product.price %></span>
 
 <%= link_to 'Edit product', edit_product_path(@product) %>
-<%= link_to 'Delete product', product_path(@product), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }
+<%= link_to 'Delete product', product_path(@product), data: { turbo_method: :delete, turbo_confirm: t('common.confirm') }
 %>
 
