--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -14,6 +14,12 @@
     <%= form.label :price %>
     <%= form.number_field :price %>
   </div>
+
+  <div>
+    <%= form.label :category_id %>
+    <%= form.collection_select :category_id, Category.all, :id, :name %>
+  </div>
+
   <div>
     <%= form.label :photo %>
     <%= form.file_field :photo %>
