--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
-<%= link_to product_path(product), class: 'product' do %>
-  <%= image_tag product.photo, width: 40 %>
+<%= link_to product_path(product), class: 'product', 'data-turbo-frame': '_top' do %>
+  <%= image_tag product.photo, width: 40 if product.photo.attached? %>
   <h2><%= product.title %></h2>
   <span><%= product.price %></span>
 
