--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,15 @@
+<%= turbo_frame_tag 'categories' do %>
 
-<h2><%= t('activerecord.attributes.product.title') %></h2>
+  <h2><%= t('activerecord.attributes.product.title') %></h2>
+  <%= form_with url: products_path, method: :get do |form| %>
+    <%= form.text_field :query_text, placeholder: t('.query_text'), onChange: 'this.form.requestSubmit()', value: params[:query_text] %>
+    <%= form.text_field :min_price, placeholder: t('.min_price'), onChange: 'this.form.requestSubmit()', value: params[:min_price] %>
+    <%= form.text_field :max_price, placeholder: t('.max_price'), onChange: 'this.form.requestSubmit()', value: params[:max_price] %>
+  <%end %>
 
-<%= render partial: 'product', collection: @products %>
+  <%= link_to t('.all'), products_path %>
+
+  <%= render partial: 'category', collection: @categories %>
+  <%= render partial: 'product', collection: @products %>
+  <% end %>
+
