--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,5 @@
 <%= link_to products_path do %>
 <h1> Sanrio shop</h1>
 <% end %>
-<%= link_to 'Add product', new_product_path %>
+<%= link_to t('.add'), new_product_path %>
+<%= link_to t('.categories'), categories_path %>
